added more css for ease of use

--- a/public/master.css
+++ b/public/master.css
@@ -2,6 +2,11 @@
   border: 1px solid lightblue;
 } */
 
+h1{
+  text-align: center;
+}
+
+
 li{
   display: flex;
   flex-flow: column;
@@ -21,10 +26,12 @@ li{
 
 .signUp{
   width: 48%;
+  text-align: center;
 }
 
 .logIn{
   width: 48%;
+  text-align: center;
 }
 
 .hide{
