--- a/public/master.css
+++ b/public/master.css
@@ -1,8 +1,12 @@
-body {
+body, html {
   text-align: center;
   /* background-color: #061581; */
   background-color: #e056fd;
   background-image: linear-gradient(315deg, #e056fd 0%, #000000 74%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
 
 img {
@@ -13,6 +17,33 @@ img {
 /* h1 {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS02tZqaDktBs33NZYRHYgzY0L_ectZ9AkeRw&usqp=CAU");
 } */
+.form-container {
+  background-color: white;
+  text-align: left;
+  width: 100%;
+  padding: 30px;
+  border-radius: 10px;
+
+}
+
+.action {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 100px;
+}
+
+#login-label {
+  text-align: center;
+  text-shadow: 2px 3px 5px red;
+  color: #75bcd8;
+}
+.form-title {
+  text-align: center;
+  text-shadow: 2px 3px 5px red;
+  color: #75bcd8;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
 
 h2 {
   text-align: center;
