--- a/public/master.css
+++ b/public/master.css
@@ -18,11 +18,12 @@ img {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS02tZqaDktBs33NZYRHYgzY0L_ectZ9AkeRw&usqp=CAU");
 } */
 .form-container {
-  background-color: white;
+  background-color: #ceedf1;
   text-align: left;
   width: 100%;
   padding: 30px;
   border-radius: 10px;
+  font-family: 
 
 }
 
