--- a/public/master.css
+++ b/public/master.css
@@ -21,6 +21,12 @@ span {
   color: white;
 }
 
+.match-img:hover {
+  height: 300px;
+  width: 300px;
+  margin-right: 10px;
+}
+
 /* h1 {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS02tZqaDktBs33NZYRHYgzY0L_ectZ9AkeRw&usqp=CAU");
 } */
@@ -43,6 +49,34 @@ span {
   font-family:
 
 }
+
+.form-container3 {
+  background-color: #758991;
+  text-align: left;
+  width: 95%;
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.details {
+  display: flex;
+  width: 100%;
+
+}
+
+.details-img {
+  width: 48%;
+
+}
+
+.details-details {
+  width: 48%;
+}
+
 
 .label-font{
   color: white;
